<resources>
    <string name="app_name">Study App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_description">profile</string>
    <string name="button">start timer</string>
    <string name="level_circle">level button</string>
    <string name="level">1</string>
    <string name="start">Start!</string>
    <string name="profile">profile image</string>
    <string name="profile_img">profile image</string>
    <string name="title_activity_setup">Enter your Name!</string>
    <string name="edit_message">Enter your name...</string>
    <string name="button_enter">Enter</string>
    <string name="name">User</string>
    <string name="subject_message">Enter a subject you study...</string>
    <string name="title_activity_subject">Subjects</string>
    <string name="Total_Time">0</string>
    <string name="Total_Time_Label">Total Time</string>
    <string name="Best_Subject">None</string>
    <string name="Worst_Subject">None</string>
    <string name="subject_button">See Subjects</string>
    <string name="list_label">Subject List</string>
    <string name="selected_subject">Subject</string>
    <string name="title_activity_add_subjects">Add Your Subjects!</string>
    <string name="title_activity_timer">Study Timer</string>

    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="timerSubject">Subject</string>
    <string name="experienceCount">0/60</string>
    <string name="title_activity_character_setup">CharacterSetup</string>
    <string name="BackButton">BackButton</string>
    <string name="ForwardButton">ForwardButton</string>
    <string name="BodyText">Body</string>
    <string name="EyesText">Eyes</string>
    <string name="ShirtText">Shirt</string>
    <string name="PantsText">Pants</string>
    <string name="title_activity_profile_settings">ProfileSettings</string>
    <string name="title_activity_timer_notification">TimerNotification</string>
</resources>
