<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:gravity="center_horizontal"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_rectangle"
        android:contentDescription="@string/profile"
        android:layout_below="@+id/name" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:src="@drawable/profile_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/profile" />

    <ImageView
        android:id="@+id/profile_eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/eyes_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_alignBottom="@+id/profile_pic"
        android:layout_marginBottom="30dp" />

    <ImageView
        android:id="@+id/profile_shirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/shirt_4"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/profile"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_marginBottom="7dp" />

    <ImageView
        android:id="@+id/profile_pants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/pants_2"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignBottom="@+id/profile"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/level_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/level_circle"
        android:contentDescription="@string/level_circle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile" />

    <TextView
        android:id="@+id/level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/level_button"
        android:layout_alignLeft="@+id/level_button"
        android:layout_alignStart="@+id/level_button"
        android:layout_alignRight="@+id/level_button"
        android:layout_alignEnd="@+id/level_button"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/level"
        android:gravity="center_horizontal"/>

    <ProgressBar
        android:id="@+id/xpBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:progressDrawable="@drawable/custom_progressbar"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/profile"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experienceCount"
        android:layout_below="@+id/xpBar"
        android:layout_alignLeft="@+id/xpBar"
        android:layout_alignStart="@+id/xpBar" />

    <Spinner
        android:id="@+id/subject_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xpBar"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignStart="@+id/startButton"
        android:layout_alignRight="@+id/startButton"
        android:layout_alignEnd="@+id/startButton" />

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_circle"
        android:layout_below="@+id/subject_list"
        android:contentDescription="@string/button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false"
        android:layout_marginTop="15dp"
        android:onClick="startTimer"/>

    <TextView
        android:id="@+id/start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startButton"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignStart="@+id/startButton"
        android:layout_alignRight="@+id/startButton"
        android:layout_alignEnd="@+id/startButton"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:gravity="center_horizontal"/>

    <Button
        android:onClick="subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignStart="@+id/startButton"
        android:layout_alignRight="@+id/startButton"
        android:layout_alignEnd="@+id/startButton"
        android:text="@string/subject_button" />

</RelativeLayout>
</ScrollView>