<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cillian.android.studyapp.studyapp.ProfileSettings">

    <EditText
        android:id="@+id/currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_message"
        android:text="User"
        android:gravity="center_horizontal"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_rectangle"
        android:contentDescription="@string/profile"
        android:layout_centerVertical="true"
        android:layout_below="@+id/currentName" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:src="@drawable/profile_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/currentName" />

    <ImageView
        android:id="@+id/profile_eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/eyes_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_alignBottom="@+id/profile"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_marginBottom="80dp" />

    <ImageView
        android:id="@+id/profile_shirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/shirt_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/profile"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_marginBottom="7dp" />

    <ImageView
        android:id="@+id/profile_pants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/pants_1"
        android:contentDescription="@string/profile_img"
        android:layout_alignRight="@+id/profile_pic"
        android:layout_alignEnd="@+id/profile_pic"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_alignStart="@+id/profile_pic"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignBottom="@+id/profile"
        android:layout_alignTop="@+id/profile_pic"
        android:layout_marginTop="30dp" />

    <ImageButton
        android:id="@+id/bodyBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/profile_pic"
        android:src="@drawable/left"
        android:contentDescription="@string/BackButton" />

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BodyText"
        android:layout_toRightOf="@+id/bodyBack"
        android:layout_toLeftOf="@+id/bodyForward"
        android:layout_alignBottom="@+id/bodyBack"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/bodyBack"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/bodyForward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/profile_pic"
        android:src="@drawable/right"
        android:contentDescription="@string/ForwardButton" />


    <ImageButton
        android:id="@+id/eyesBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyBack"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/profile_pic"
        android:src="@drawable/left"
        android:contentDescription="@string/BackButton"/>

    <TextView
        android:id="@+id/eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EyesText"
        android:layout_toRightOf="@+id/eyesBack"
        android:layout_toLeftOf="@+id/eyesForward"
        android:layout_alignBottom="@+id/eyesBack"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/eyesBack"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/eyesForward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyBack"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/profile_pic"
        android:src="@drawable/right"
        android:contentDescription="@string/ForwardButton"/>



    <ImageButton
        android:id="@+id/shirtBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eyesBack"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/profile_pic"
        android:src="@drawable/left"
        android:contentDescription="@string/BackButton"/>

    <TextView
        android:id="@+id/shirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShirtText"
        android:layout_toRightOf="@+id/shirtBack"
        android:layout_toLeftOf="@+id/shirtForward"
        android:layout_alignBottom="@+id/shirtBack"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/shirtBack"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/shirtForward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eyesBack"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/profile_pic"
        android:src="@drawable/right"
        android:contentDescription="@string/ForwardButton"/>






    <ImageButton
        android:id="@+id/pantsBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shirtBack"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/profile_pic"
        android:src="@drawable/left"
        android:contentDescription="@string/BackButton"/>

    <TextView
        android:id="@+id/pants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PantsText"
        android:layout_toRightOf="@+id/pantsBack"
        android:layout_toLeftOf="@+id/pantsForward"
        android:layout_alignBottom="@+id/pantsBack"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/pantsBack"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/pantsForward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shirtBack"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/profile_pic"
        android:src="@drawable/right"
        android:contentDescription="@string/ForwardButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish!"
        android:id="@+id/button"
        android:layout_below="@+id/pantsBack"
        android:layout_alignRight="@+id/pantsForward"
        android:layout_alignEnd="@+id/pantsForward"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/bodyBack"
        android:onClick="finish" />

</RelativeLayout>
